--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'IBM Plex Mono', sans-serif;
   line-height: 1.5;
   font-weight: 400;
  
-  padding-top: 4rem;
+  padding-top: 5rem;
   
   color-scheme: light dark;
 
