theming and styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 :root {
-  font-family: 'IBM Plex Mono', sans-serif;
+  /* font-family: 'IBM Plex Mono', sans-serif; */
+  font-family: "IBM Plex Mono", sans-serif;
+  font-style: "normal";
   line-height: 1.5;
   font-weight: 400;
  
   padding-top: 5rem;
   
-  color-scheme: light dark;
+
 
 
   font-synthesis: none;
